Reorganized files to be cleaner. Renamed media files to access new directories. Refactored media variables.
 Changes to be committed:
 	modified:   GameApp.py
 	modified:   game.kv
 	renamed:    1_dots.png -> images/1_dots.png
 	renamed:    2_dots.png -> images/2_dots.png
 	renamed:    3_dots.png -> images/3_dots.png
 	renamed:    4_dots.png -> images/4_dots.png
 	renamed:    5_dots.png -> images/5_dots.png
 	renamed:    6_dots.png -> images/6_dots.png
 	renamed:    basket.jpg -> images/basket.jpg
 	renamed:    tabletop1.jpg -> images/tabletop1.jpg
 	renamed:    tabletop2.jpg -> images/tabletop2.jpg
 	renamed:    tabletop3.jpg -> images/tabletop3.jpg
 	renamed:    tabletop4.jpg -> images/tabletop4.jpg
 	renamed:    tabletop5.jpg -> images/tabletop5.jpg
 	renamed:    tabletop6.jpg -> images/tabletop6.jpg
 	new file:   media.py
 	renamed:    sound1.wav -> sounds/sound1.wav
 	renamed:    sound2.wav -> sounds/sound2.wav
 	renamed:    sound3.wav -> sounds/sound3.wav
 	renamed:    sound4.wav -> sounds/sound4.wav
 	renamed:    sound5.wav -> sounds/sound5.wav
 	renamed:    sound6.wav -> sounds/sound6.wav

--- a/game.kv
+++ b/game.kv
@@ -1,5 +1,7 @@
 #:kivy 1.10.0
 #:import random random
+#:import tables media.tables
+#:import basket media.basket
 
 <DieBasket>
     size_hint: .9, .25
@@ -8,7 +10,7 @@
 <Base>:
     die_basket: die_basket
     Image:
-        source: 'tabletop2.jpg'
+        source: tables[2]
         allow_stretch: True
         keep_ratio: False
         Roll:
@@ -31,7 +33,7 @@
         size_hint: .9, .25
         pos_hint: {'x': .05, 'y': .7}
         Image:
-            source: 'basket.jpg'
+            source: basket
             allow_stretch: True
             keep_ratio: False
             canvas.after:
