Add screens for intro, number of players and player names.
Late commit. As above with mechanics added for creating correct number of
text input boxes for number of players.

Temporary backgrounds for first three screens.

Mechanics for adding dice to a list of kept dice. Need to fit this into game
logic.

 On branch logical
 Changes to be committed:
	modified:   GameApp.py
	new file:   Game_1App.py
	modified:   game.kv

--- a/game.kv
+++ b/game.kv
@@ -3,9 +3,19 @@
 #:import tables media.tables
 #:import basket media.basket
 
+<MenuScreen>:
+    name: 'menu'
+    BoxLayout:
+        Button:
+            text: 'press for game screen'
+            on_press: root.manager.current = 'game'
+        Button:
+            text: 'press me'
+
 <DieBasket>
     size_hint: .9, .25
     pos_hint: {'x': .05, 'y': .7}
+
 
 <Base>:
     die_basket: die_basket
@@ -41,6 +51,10 @@
                     rectangle: self.x+1,self.y+1,self.width-1,self.height-1
     Dice:
         id: dice
+
+<GameScreen>:
+    name: 'game'
+    Base
 
 <Roll>
 
