--- a/game.kv
+++ b/game.kv
@@ -1,3 +1,4 @@
+# Copyright 2018 Paul Kutrich. All rights reserved.
 #:kivy 1.10.1
 #: import ScreenManager kivy.uix.screenmanager.ScreenManager
 #: import Screen kivy.uix.screenmanager.ScreenManager
