--- a/game.kv
+++ b/game.kv
@@ -76,18 +76,23 @@ ScreenManager:
 
 <ButtonLabel>
     font_size: 50
+    halign: 'center'
     color: rgba(colors['text'])
-    on_touch_up: root.parent.current = 'name'
     canvas.before:
         Color:
             rgba: rgba(colors['prime'])
         Rectangle:
-            pos: self.pos
-            size: (self.size[0] + 5, self.size[1] + 5)
+            pos: self.x, self.y
+            size: self.texture_size[0] + 5, self.texture_size[1]
 
 <PlayerNumberScreen>
     name: 'number'
+    layout: layout
     FloatLayout:
+        id: layout
+        one: one
+        two: two
+        three: three
         Image:
             source: 'images/tabletop3.jpg'
             allow_stretch: True
@@ -100,20 +105,23 @@ ScreenManager:
             size_hint: (.275, .075)
             pos_hint: {'x': .35, 'y': .7}
         ButtonLabel:
-            text: 'Just Me!'
+            id: one
+            text: 'One'
             pos_hint: {'x': .15, 'y': .425}
-            size_hint: (.25, .075)
-            on_touch_down: root.set_num_players(1)
+            size_hint: .11, .1
+            #on_touch_down: root.set_num_players(1)
         ButtonLabel:
-            text: 'You and Me!'
-            pos_hint: {'x': .525, 'y': .425}
-            size_hint: (.35, .075)
-            on_touch_down: root.set_num_players(2)
+            id: two
+            text: 'Two'
+            pos_hint: {'x': .4, 'y': .425}
+            size_hint: .13, .1
+            #on_touch_down: root.set_num_players(2)
         ButtonLabel:
-            text: 'We Three!'
-            pos_hint: {'x': .32, 'y': .3}
-            size_hint: (.3, .075)
-            on_touch_down: root.set_num_players(3)
+            id: three
+            text: 'Three'
+            pos_hint: {'x': .65, 'y': .425}
+            size_hint: .165, .1
+            #on_touch_down: root.set_num_players(3)
 
 <DieHolder>
 
@@ -128,7 +136,7 @@ ScreenManager:
             rgba: root.valid_basket
         Rectangle:
             pos: self.x, self.y
-            size: self.width, self.x + 2
+            size: self.width, self.x + 3
     Label:
         text: 'Put Keepers Up Here'
         font_size: 18
@@ -143,17 +151,11 @@ ScreenManager:
         padding: [5]
         spacing: 5
         DieHolder:
-            id: '1'
         DieHolder:
-            id: '2'
         DieHolder:
-            id: '3'
         DieHolder:
-            id: '4'
         DieHolder:
-            id: '5'
         DieHolder:
-            id: '6'
 
 <Roll>
     text: 'Roll \'em!'
