--- a/game.kv
+++ b/game.kv
@@ -187,7 +187,7 @@ ScreenManager:
             pos: self.pos
             size: self.size
 
-<Rules>:
+<RulesButton>:
     text: 'See Rules'
     color: rgba(colors['text'])
     font_size: 35
@@ -250,5 +250,5 @@ ScreenManager:
                 id: end_turn
             KeepAll:
                 id: keep
-            Rules:
+            RulesButton:
                 id: rules
