Gameplay Labels -> Buttons
Fixes #67

 On branch dev
 Changes to be committed:
	modified:   GameApp.py
		All gameplay buttons now inherit from Button.
	modified:   game.kv
		Button class graphics instructions.

--- a/game.kv
+++ b/game.kv
@@ -158,45 +158,29 @@ ScreenManager:
     text: 'Roll \'em!'
     color: rgba(colors['text'])
     font_size: 35
-    canvas.before:
-        Color:
-            rgba: rgba(colors['prime'])
-        Rectangle:
-            pos: self.pos
-            size: self.size
+    background_normal: ''
+    background_color: rgba(colors['prime dark'])
 
 <EndTurn>:
     text: 'End Turn'
     color: rgba(colors['text'])
     font_size: 35
-    canvas.before:
-        Color:
-            rgba: rgba(colors['prime'])
-        Rectangle:
-            pos: self.pos
-            size: self.size
+    background_normal: ''
+    background_color: rgba(colors['prime dark'])
 
 <KeepAll>:
     text: 'Keep All'
     color: rgba(colors['text'])
     font_size: 35
-    canvas.before:
-        Color:
-            rgba: rgba(colors['prime'])
-        Rectangle:
-            pos: self.pos
-            size: self.size
+    background_normal: ''
+    background_color: rgba(colors['prime dark'])
 
 <RulesButton>:
     text: 'See Rules'
     color: rgba(colors['text'])
     font_size: 35
-    canvas.before:
-        Color:
-            rgba: rgba(colors['prime'])
-        Rectangle:
-            pos: self.pos
-            size: self.size
+    background_normal: ''
+    background_color: rgba(colors['prime dark'])
 
 <GameButtonRow>:
     size_hint: 1, .15
