Restructures ScoreArea, GameScreen.update_display
 On branch dev
 Changes to be committed:
	modified:   GameApp.py
		Moves GameScreen.update_total_score up to be adjacent to
			update_round_score.
		Moves instantiation of PlayerScore children to kv file.
		Updates GameScreen.on_enter to access PlayerScore and its children.
		Makes GameScreen.update_display a helper function calling more compact
			update fuctions.
		Adds update_name_display, update_round_diaplay, and update_total_display
			methods.
	modified:   game.kv
		Adds PlayerArea Label rule.
		PlayerScore Labels -> PlayerArea.
		Adds spacing and padding to ScoreArea

--- a/game.kv
+++ b/game.kv
@@ -163,17 +163,36 @@ ScreenManager:
         DieHolder:
         DieHolder:
 
-<PlayerScore>:
-
-<ScoreArea>:
-    size_hint: 1, 0.1
-    pos_hint: {'x': 0, 'y': 0.9}
-    canvas:
+<PlayerArea@Label>:
+    font_size: 22
+    color: rgba(colors['text'])
+    canvas.before:
         Color:
             rgba: rgba(colors['prime dark'])
         Rectangle:
             pos: self.pos
             size: self.size
+
+<PlayerScore>:
+    total: total
+    round: round
+    name: name
+    PlayerArea:
+        id: name
+        text_size: self.width, None
+        halign: 'center'
+    PlayerArea:
+        id: round
+        halign: 'left'
+    PlayerArea:
+        id: total
+        halign: 'right'
+
+<ScoreArea>:
+    size_hint: 1, 0.1
+    pos_hint: {'x': 0, 'y': 0.9}
+    spacing: 2
+    padding: [2]
 
 <Roll>:
     text: 'Roll \'em!'
